assets added, gallery n img styles added

--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Card Gallery</title>
-</head>
-<body>
-    <div class="container">
-        <div class="gallery">
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-            <div class="img"></div>
-        </div>
-    </div>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="index.css">
+
+
+		<title>3D Card Gallery</title>
+	</head>
+	<body>
+		<div class="container">
+			<div class="gallery">
+				<div class="img" style="background-image: url('assets/img(1).jpg')"></div>
+				<div class="img" style="background-image: url('assets/img(2).jpg')"></div>
+				<div class="img" style="background-image: url('assets/img(3).jpg')"></div>
+				<div class="img" style="background-image: url('assets/img(4).jpg')"></div>
+				<div class="img" style="background-image: url('assets/img(5).jpg')"></div>
+				<div class="img" style="background-image: url('assets/img(6).jpg')"></div>
+				<div class="img" style="background-image: url('assets/img(7).jpg')"></div>
+				<div class="img" style="background-image: url('assets/img(8).jpg')"></div>
+				<div class="img" style="background-image: url('assets/img(9).jpg')"></div>
+				<div class="img" style="background-image: url('assets/img(10).jpg')"></div>
+			</div>
+		</div>
+	</body>
 </html>
