animations and 3d effect added

--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
 				<div class="img" style="background-image: url('assets/img(2).jpg')"></div>
 				<div class="img" style="background-image: url('assets/img(3).jpg')"></div>
 				<div class="img" style="background-image: url('assets/img(4).jpg')"></div>
-				<div class="img" style="background-image: url('assets/img(5).jpg')"></div>
+				<div class="img expand" style="background-image: url('assets/img(5).jpg')"></div>
 				<div class="img" style="background-image: url('assets/img(6).jpg')"></div>
 				<div class="img" style="background-image: url('assets/img(7).jpg')"></div>
 				<div class="img" style="background-image: url('assets/img(8).jpg')"></div>
 				<div class="img" style="background-image: url('assets/img(9).jpg')"></div>
 				<div class="img" style="background-image: url('assets/img(10).jpg')"></div>
+                <div class="img" style="background-image: url('assets/img(11).jpg')"></div>
+                <div class="img" style="background-image: url('assets/img(12).jpg')"></div>
+                <div class="img" style="background-image: url('assets/img(13).jpg')"></div>
+
 			</div>
 		</div>
 	</body>
